# Monte-Carlo-simulation-of-light-propagation

./: .gitignore  CMakeLists.txt  Grad_work_bachelor.sln
Grad_work_bachelor/: Array_2D.h  CMakeLists.txt  Defines.h  Grad_work_bachelor.vcxproj  Grad_work_bachelor.vcxproj.filters  Layer.h  Output.h  Photon.cpp  Photon.h  Rand_gen.cpp  Rand_gen.h  State.cpp  State.h  main.cpp
Grad_work_bachelor/includes/: Array_2D.h  Defines.h  Helpers_func.h  Input.hpp  Launch_photon.hpp  Layer.h  Output.h  Photon.h  Photon.hpp  Rand_gen.h  State.h
Grad_work_bachelor/src/: Helpers_func.cpp  Input.cpp  Launch_photon.cpp  Layer.cpp  Output.cpp  Photon.cpp  Rand_gen.cpp  State.cpp  main.cpp
Photon_propagation_backend/: CMakeLists.txt  Grad_work_bachelor.sln  Grad_work_bachelor.vcxproj  Grad_work_bachelor.vcxproj.filters
Photon_propagation_backend/config/: Config.hpp.in
Photon_propagation_backend/includes/: Array_2D.hpp  Defines.hpp  Input.hpp  Layer.hpp  Output.hpp  Output_data.hpp  Output_to_file.hpp  Photon.hpp  Rand_gen.hpp  State.hpp
Photon_propagation_backend/src/: Input.cpp  Launch_photon.cpp  Output.cpp  Output_to_console.cpp  Output_to_file.cpp  Photon.cpp  Rand_gen.cpp  State.cpp  main.cpp
Photon_propagation_backend/tests/: CMakeLists.txt  rand_gen_test.cpp
Photon_propagation_frontend/: InputBinFile.cs  Layer.cs  Photon_prapagation_form.Designer.cs  Photon_prapagation_form.cs  Photon_prapagation_form.resx  Photon_propagation_frontend.csproj  Photon_propagation_frontend.sln  Program.cs  SimulationForm.Designer.cs  SimulationForm.cs  SimulationForm.resx  State.cs  Visualizer.cs
Photon_propagation_frontend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Tmp_project/: Form1.Designer.cs  Form1.cs  Program.cs  Tmp_project.csproj
Tmp_project/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
input/: input.json  input5.json  only_glass.json  two_layers.json
metrics_result/: tmp.csv
metrics_result/base_x64_metrics/: perf_stat.txt  run_1.csv  run_16.csv  run_2.csv  run_4.csv  run_8.csv
metrics_result/tmp_folder/: run_1.csv  run_16.csv  run_2.csv  run_4.csv  run_8.csv
scripts/: base_times_x64.csv  check_result.py  run.py  run_with_scale.py
